Appending a group to 'Active Layer' doesn't work #34726

Closed
opened 2013-03-22 06:39:58 +01:00 by Andrew Price · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bits, 2x Nvidia GTX 680s

- Blender version with error, and version that worked ---

Blender 2.66 r55328

- Short description of error ---

Appending a group and selecting 'Active layer' doesn't place the group on the active layer.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

This has broken for many years, I just thought I'd finally get around to reporting it.

  1. Open the default scene in blender.

  2. Select the default cube and press Ctrl+G to create a group.

  3. Save the .blend

  4. Open a new scene in blender and move to a clean layer.

  5. Press Shift+F1, select the original .blend, press Groups, then select 'Group' that we created earlier.

  6. Make sure that the "Active Layer" option in the toolbar is selected, then press Append.

  7. The group will have appended to a different layer (Layer 1), not the active layer.

Thanks guys. Let me know if you have any questions.

Andrew Price%%%

%%%--- Operating System, Graphics card --- Windows 7 64bits, 2x Nvidia GTX 680s - Blender version with error, and version that worked --- Blender 2.66 r55328 - Short description of error --- Appending a group and selecting 'Active layer' doesn't place the group on the active layer. - Steps for others to reproduce the error (preferably based on attached .blend file) --- This has broken for many years, I just thought I'd finally get around to reporting it. 1. Open the default scene in blender. 2. Select the default cube and press Ctrl+G to create a group. 3. Save the .blend 4. Open a new scene in blender and move to a clean layer. 5. Press Shift+F1, select the original .blend, press Groups, then select 'Group' that we created earlier. 6. Make sure that the "Active Layer" option in the toolbar is selected, then press Append. 7. The group will have appended to a different layer (Layer 1), not the active layer. Thanks guys. Let me know if you have any questions. Andrew Price%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Thanks for the poke, fix went to svn a minute ago!%%%

%%%Thanks for the poke, fix went to svn a minute ago!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34726
No description provided.